--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ setTimeout(function(){
 setTimeout(function(){
   if ($(".time").hasClass("sun")) {
   $(".pant").removeClass("pantnight");
-  $(".papa").css('top', '38vh');
+  $(".papa").css('top', '39vh');
   $(document.body).css('background-color', '#8768E1');
   $(".white").removeClass("whitenight");
   $(".pupil").removeClass("pupilnight");
@@ -1167,8 +1167,8 @@ $(document).mousemove(function (event) {
     <div class="cross"></div>
   </div>
 </div>
-<h2>Великий Росток</h2>
-<div class="festimg">
+<h2>Божественный Росток</h2>
+<div class="greenimg">
 </div>
  <p>Благотворное влияние огня приписывалось Солнцу. Фестиваль «Vulcanalia» всегда проводился в сезон сбора урожая. Римляне восхваляли бога Вулкана, которая обеспечил их едой. В этой зоне находится Великий Росток высотой в 3 метра. Посетители вольны поливать и любоваться растением. Главное — возблагодарите великого Бога, который также позволяет поварам Boomshh вкусно кормить вас на фестивале и вне.</p>
 </div>
@@ -1181,7 +1181,7 @@ $(document).mousemove(function (event) {
   </div>
 </div>
 <h2>Солнечно-тканевая зона</h2>
-<div class="festimg">
+<div class="clothimg">
 </div>
  <p>У древних римлян была традиция: во время каждого фестиваля  «Vulcanalia» повседневная одежда развешивалась длинными рядами на солнце. Взамен люди надевали самые праздничные из нарядов, чтобы порадовать Вулкана. Предлагаем вам сделать то же самое перед походом на ваше вечернее свидание или семейный ужин.</p>
 </div>
@@ -1194,9 +1194,9 @@ $(document).mousemove(function (event) {
   </div>
 </div>
 <h2>Спальная зона</h2>
-<div class="festimg">
+<div class="housesimg">
 </div>
- <p>Празднование традиционно проводилось вне города, в связи с обилием огня и шума. Наш фестиваль не исключение. Рядом с курсором можно заметить количество километров от города. Далековато правда? Не поедете ведь после плотного ужина домой? Оставайтесь в нашей комфортабельной спальной зоне (здесь есть даже кондиционеры).</p>
+<p>Празднование традиционно проводилось вне города, в связи с обилием огня и шума. Наш фестиваль не исключение. Рядом с курсором можно заметить количество километров от города. Далековато правда? Не поедете ведь после плотного ужина домой? Оставайтесь в нашей комфортабельной спальной зоне (здесь есть даже кондиционеры).</p>
 </div>
 
 <div class="info kids">
@@ -1207,7 +1207,7 @@ $(document).mousemove(function (event) {
   </div>
 </div>
 <h2>Детская арена</h2>
-<div class="festimg">
+<div class="stickimg">
 </div>
  <p>Вулкан также ассоциировался с домашним уютом, ему приносили подношения, чтобы в семье все было хорошо. На фестиваль с радостью приводили детей. Мы также не советуем ваших домочадцев дома. Помимо всего прочего веселья на фестивале находится детская арена, где дети могут наслаждаться бесчинством и беспределом.</p>
 </div>
@@ -1220,9 +1220,9 @@ $(document).mousemove(function (event) {
   </div>
 </div>
 <h2>Зона игр</h2>
-<div class="festimg">
+<div class="cubeimg">
 </div>
- <p>На фестивале особое место отводилось играм — так называемым «Ludi», включавшие атлетические состязания, гонки колесниц, кулачный и звериный бои, сценическое разыгрывание сражений. У древних римлян такие игры ассоциировались с религиозным культом. Мы же предлагаем вам поиграть в настольные и компьютерные игры во славу выходных и лета!</p>
+<p>На фестивале особое место отводилось играм — так называемым «Ludi», включавшие атлетические состязания, гонки колесниц, кулачный и звериный бои, сценическое разыгрывание сражений. У древних римлян такие игры ассоциировались с религиозным культом. Мы же предлагаем вам поиграть в настольные и компьютерные игры во славу выходных и лета!</p>
 </div>
 
 <div class="info kino">
@@ -1233,9 +1233,9 @@ $(document).mousemove(function (event) {
   </div>
 </div>
 <h2>Амфитеатр</h2>
-<div class="festimg">
+<div class="colizimg">
 </div>
- <p>Во время праздника всегда проводились театральные постановки, конкурсы музыкантов-исполнителей. Простите, мы не пригласили актеров (тем более, что в Риме они были не в почете), зато в течение всего фестиваля в амфитеатре показывают самое разное кино.  *Если вы фанат фон Триера, приходите попозже.</p>
+<p>Во время праздника всегда проводились театральные постановки, конкурсы музыкантов-исполнителей. Простите, мы не пригласили актеров (тем более, что в Риме они были не в почете), зато в течение всего фестиваля в амфитеатре показывают самое разное кино.  *Если вы фанат фон Триера, приходите попозже.</p>
 </div>
 
 <div class="info work">
@@ -1246,9 +1246,9 @@ $(document).mousemove(function (event) {
   </div>
 </div>
 <h2>Кузница Вулкана</h2>
-<div class="festimg">
+<div class="cuznimg">
 </div>
- <p>Вулкан для древних греков —  бег разрушительного и очистительного   огня. Для римлян — еще и покровитель кузнечного дела. Римляне полагали, что под любой горой находится мастерская Вулкана: когда в ней кипит работа, извергается лава. Мы в Boomshh следуем традициям и готовим исключительно на подземной кухне. Приглашаем вас на экскурсию в <del>кузницу Вулкана</del> обитель наших лавовых поваров.</p>
+<p>Вулкан для древних греков —  бег разрушительного и очистительного   огня. Для римлян — еще и покровитель кузнечного дела. Римляне полагали, что под любой горой находится мастерская Вулкана: когда в ней кипит работа, извергается лава. Мы в Boomshh следуем традициям и готовим исключительно на подземной кухне. Приглашаем вас на экскурсию в <del>кузницу Вулкана</del> обитель наших лавовых поваров.</p>
 </div>
 
 <div class="info dance">
@@ -1259,9 +1259,9 @@ $(document).mousemove(function (event) {
   </div>
 </div>
 <h2>Тусовочная зона</h2>
-<div class="festimg">
+<div class="discoimg">
 </div>
- <p>Вулкан был… многофункциональным богом. В сферу его забот также входила работа «небесного огня» — молний. В нашей умопомрачительной тусовочной зоне предлагаем окунуться в дикий рейв под звуки кифары. Мы клянемся, танец под нашим диско-шаром с молниями даже лучше алкоголя.</p>
+<p>Вулкан был… многофункциональным богом. В его обязанности также входила забота о работе «небесного огня» — молний. В нашей умопомрачительной тусовочной зоне предлагаем окунуться в дикий рейв под звуки кифары. Мы клянемся, танец под нашим диско-шаром с молниями даже лучше алкоголя.</p>
 </div>
 
 <div class="info hot">
@@ -1272,9 +1272,9 @@ $(document).mousemove(function (event) {
   </div>
 </div>
 <h2>Великий термометр</h2>
-<div class="festimg">
+<div class="celciumimg">
 </div>
- <p>Фестиваль обыкновенно проводился в самый жаркий день лета. В этой части фестиваля находился Великий (четырехметровый, конечно) термометр. В правой верхней части карты можно заметить его показания термометра. Хотя кому нужны эти ваши технологии, когда температуру воздуха можно увидеть с любой точки на территории? Конечно, чем дальше от главного вулкана, тем прохладнее становится. Возьмите с собой на фестиваль побольше одежды!</p>
+<p>Фестиваль обыкновенно проводился в самый жаркий день лета. В этой части фестиваля находился Великий (четырехметровый, конечно) термометр. В правой верхней части карты можно заметить его показания термометра. Хотя кому нужны эти ваши технологии, когда температуру воздуха можно увидеть с любой точки на территории? Конечно, чем дальше от главного вулкана, тем прохладнее становится. Возьмите с собой на фестиваль побольше одежды!</p>
 </div>
 
 <div class="info mama">
@@ -1285,9 +1285,9 @@ $(document).mousemove(function (event) {
   </div>
 </div>
 <h2>Главный храм</h2>
-<div class="festimg">
+<div class="pantimg">
 </div>
- <p>В этой части фестиваля вы можете узнать всю основную информацию и купить сувениры. С праздником связано множество традиций. Например, римляне разжигали множество высоких костров по всей территории фестиваля. Зажгите костры, пожалуйста, мы не успели. К слову, у костров всегда можно принести жертву богу Вулкану. Давайте не будем затрагивать этические вопросы, у нас здесь античный вайб. Фестиваль также проводился всю ночь и весь день, поэтому вы можете посмотреть, как все будет выглядеть ночью. Приятного времяпрепровождения! </p>
+<p>В этой части фестиваля вы можете узнать всю основную информацию и купить сувениры. С праздником связано множество традиций. Например, римляне разжигали множество высоких костров по всей территории фестиваля. Зажгите костры, пожалуйста, мы не успели. К слову, у костров всегда можно принести жертву богу Вулкану. Давайте не будем затрагивать этические вопросы, у нас здесь античный вайб. Фестиваль также проводился всю ночь и весь день, поэтому вы можете посмотреть, как все будет выглядеть ночью. Приятного времяпрепровождения! </p>
 </div>
 
 <div class="info loved">
@@ -1298,7 +1298,7 @@ $(document).mousemove(function (event) {
   </div>
 </div>
 <h2>Зона Вулкана</h2>
-<div class="festimg">
+<div class="bogimg">
 </div>
  <p>Вулкан — античный бог разрушительного и очистительного огня. Не являясь одним из 12 главных богов Пантеона, обладает тем не менее богатой историей.  Здесь расположена статуя Вулкана. Это главное место поклонения на территории фестиваля. Для менее религиозных людей в этой части фестиваля круглосуточно раздаются прохладительные напитки.</p>
 </div>
