--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 <h2>Главный вулкан</h2>
 <div class="festimg">
 </div>
-<p>«Vulcanalia» — ежегодный фестиваль, который проводился в Древнем Риме каждое 23 августа.<br><br>Это был праздник плодородия и&nbsp;любви, отдыха и&nbsp;работы, жизни и&nbsp;смерти одновеременно.<br>Также Vulcanalia был праздником урожая. Мы,&nbsp;в&nbsp;«Boomshh» решили устроить для вас этот&nbsp;фестиваль, потому что его темы и&nbsp;обычаи тесно связаны с&nbsp;нашим&nbsp;рестораном.
+<p>«Vulcanalia» — ежегодный фестиваль, который проводился в&nbsp;Древнем Риме каждое 23 августа.<br><br>Это был праздник плодородия и&nbsp;любви, отдыха и&nbsp;работы, жизни и&nbsp;смерти одновеременно.<br>Также Vulcanalia был праздником урожая. Мы,&nbsp;в&nbsp;«Boomshh» решили устроить для вас этот&nbsp;фестиваль, потому что его темы и&nbsp;обычаи тесно связаны с&nbsp;нашим&nbsp;рестораном.
 <br>
 <br>
 Давайте восхвалять еду и&nbsp;вулканы вместе!</p>
